# docassemble-MAInformalAppelleeBrief

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/MAInformalAppelleeBrief/data/questions/: informal_appellee_brief_form.yml
docassemble/MAInformalAppelleeBrief/data/templates/: appellee_brief.docx  appellee_brief.docx.broken_backup  appellee_brief_next_steps.docx  exhibit_attachment.cover_page.docx  exhibit_cover_sheet (2).docx  impounded_document.docx  impounded_document.docx.backup2  impounded_exhibit_attachment.cover_page (2).docx  impounded_exhibit_attachment.cover_page.docx  impounded_record_appendix_document.docx  informal_appellee_brief_form.docx  informal_appellee_brief_form_next_steps.docx  record_appendix_document.docx
